# learning-vlm

./: .gitignore  CLAUDE.md  LESSON_PLAN.md  README.md  project-prompt.md  pyproject.toml
experiments/001_baseline/: generations_Qwen_Qwen2.5-VL-3B-Instruct_captioning.jsonl  generations_Qwen_Qwen2.5-VL-3B-Instruct_chart_qa.jsonl  generations_Qwen_Qwen2.5-VL-3B-Instruct_doc_qa.jsonl  generations_Qwen_Qwen2.5-VL-3B-Instruct_vqa.jsonl  generations_google_paligemma-3b-pt-224_captioning.jsonl  generations_google_paligemma-3b-pt-224_chart_qa.jsonl  generations_google_paligemma-3b-pt-224_doc_qa.jsonl  generations_google_paligemma-3b-pt-224_vqa.jsonl  notes.md  results.json
experiments/002_lr_sweep/: generations_1e-04.jsonl  generations_2e-04.jsonl  generations_5e-05.jsonl  notes.md  results.json
experiments/003_rank_sweep/: generations_r16.jsonl  generations_r4.jsonl  generations_r8.jsonl  notes.md  results.json
experiments/008_wise_ft/: generations_a0.00_chart_qa.jsonl  generations_a0.00_doc_qa.jsonl  generations_a0.00_vqa.jsonl  generations_a0.25_chart_qa.jsonl  generations_a0.25_doc_qa.jsonl  generations_a0.25_vqa.jsonl  generations_a0.50_chart_qa.jsonl  generations_a0.50_doc_qa.jsonl  generations_a0.50_vqa.jsonl  generations_a0.75_chart_qa.jsonl  generations_a0.75_doc_qa.jsonl  generations_a0.75_vqa.jsonl  generations_a1.00_chart_qa.jsonl  generations_a1.00_doc_qa.jsonl  generations_a1.00_vqa.jsonl  notes.md  (+1 more)
scripts/: postmortem.py  run_baseline.py  run_lr_sweep.py  run_rank_sweep.py  run_wise_ft.py  smoke_test.py
src/: adapt.py  data.py  eval.py  model.py  train.py
(+24 files in other folders)
